--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -412,3 +412,11 @@ input[type="password"],
     font-weight: bold;
     text-align: center;
 }
+
+.bubble {
+    background: var(--accent-color-active);
+    color: var(--main-text);
+    border-radius: 0.3rem;
+    width: fit-content;
+    padding: 0.25rem;
+}
