--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
-    <title>Register</title>
+    {% set title=Register %}
+    {% include 'components/meta.html' %}
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
 </head>
 
