--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
-    <title>{{ user.nickname }}</title>
+    {% set title=user.nickname %}
+    {% include 'components/meta.html' %}
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
 </head>
 
