Fix templates, update README.md

--- a/src/templates/upload.html
+++ b/src/templates/upload.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    {% set title=Upload video %}
+    {% set title="Upload video" %}
     {% include 'components/meta.html' %}
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
