--- a/src/templates/error.html
+++ b/src/templates/error.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    {% set title=FilmFlask %}
+    {% set title="FilmFlask" %}
     {% include 'components/meta.html' %}
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
