--- a/src/templates/components/meta.html
+++ b/src/templates/components/meta.html
@@ -15,6 +15,16 @@
 <link rel="shortcut icon" href="/image/{{video.thumbnail_id}}">
 <meta name="twitter:description" content="{{video.description}}">
 <meta name="twitter:image" content="/image/{{video.thumbnail_id}}">
+{% elif user %}
+<meta property="og:description" content="{{user.bio}}">
+<meta property="og:image" content="/image/{{user.avatar_id}}">
+<meta property="og:image:secure_url" content="/image/{{user.avatar_id}}">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="854">
+<meta property="og:image:height" content="480">
+<link rel="shortcut icon" href="/image/{{user.avatar_id}}">
+<meta name="twitter:description" content="{{user.bio}}">
+<meta name="twitter:image" content="/image/{{user.avatar_id}}">
 {% else %}
 <meta property="og:description" content="The very best streaming service on the planet!">
 <meta name="twitter:description" content="The very best streaming service on the planet!">
